--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.22.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
@@ -18,8 +19,10 @@
     "mongoose": "^6.0.8",
     "next": "11.1.2",
     "next-connect": "^0.10.2",
+    "notistack": "^1.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
