--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@paypal/react-paypal-js": "^7.4.1",
     "axios": "^0.22.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
