--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,9 @@
     "node": true,
     "es6": true
   },
-  "extends": [
-    "eslint:recommended",
-    "next",
-    "next/core-web-vitals"
-  ]
+  "extends": "next",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
+  }
 }
